# suzunari-error

./: .aiignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml
.claude/: CLAUDE.md
.config/mise/: config.toml
.github/: CODEOWNERS  dependabot.yml  problem-matchers.json  renovate.json5
.github/workflows/: code-quality.yaml  dependency-review.yaml  ossf-scorecard.yaml  publish.yaml  scorecard.yaml
.junie/: coding-practices.md  guidelines-general.md  guidelines-git.md  guidelines-rs.md  guidelines-suzunari.md  guidelines.md
docs/: coding-practices.md  guidelines-general.md  guidelines-rs.md  guidelines-suzunari.md  guidelines.md
examples/: basic.rs  boxed_error.rs  display_error.rs
macro-impl/: Cargo.toml
macro-impl/src/: attribute.rs  derive.rs  derive_stack_error_impl.rs  helper.rs  lib.rs  report.rs  suzu_attr.rs  suzunari_location_impl.rs
src/: __private.rs  boxed_stack_error.rs  display_error.rs  lib.rs  location.rs  stack_error.rs  stack_report.rs
tests/: compile_fail_test.rs  integration_test.rs  location_test.rs  macro_test.rs  report_test.rs  stack_error_test.rs  suzu_attr_test.rs
tests-features/: Cargo.toml
tests-features/src/: lib.rs
tests-features/tests/: alloc_tier_test.rs  core_only_test.rs  display_error_integration.rs
tests/compile-fail/: derive_enum_multi_variant_errors.rs  derive_enum_multi_variant_errors.stderr  derive_enum_no_location.rs  derive_enum_no_location.stderr  derive_enum_tuple_variant.rs  derive_enum_tuple_variant.stderr  derive_enum_wrong_location_type.rs  derive_enum_wrong_location_type.stderr  derive_multiple_stack_location.rs  derive_multiple_stack_location.stderr  derive_stack_location_wrong_type.rs  derive_stack_location_wrong_type.stderr  derive_struct_no_location.rs  derive_struct_no_location.stderr  derive_struct_wrong_location_type.rs  derive_struct_wrong_location_type.stderr  derive_tuple_struct.rs  derive_tuple_struct.stderr  derive_union.rs  derive_union.stderr  report_async_fn.rs  report_async_fn.stderr  report_const_fn.rs  report_const_fn.stderr  report_extern_fn.rs  report_extern_fn.stderr  report_generics.rs  report_generics.stderr  report_no_return_type.rs  report_no_return_type.stderr  report_non_unit_ok.rs  report_non_unit_ok.stderr  report_result_wrong_arity.rs  report_result_wrong_arity.stderr  report_unsafe_fn.rs  report_unsafe_fn.stderr  report_where_clause.rs  report_where_clause.stderr  report_with_args.rs  report_with_args.stderr  (+60 more)
