[workspace.package]
description = "A highly traceable and noise-free error system that propagates error locations as error contexts and minimizes information output to the log"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/ryotan/suzunari-error"
license = "MIT OR Apache-2.0"
authors = ["ryotan"]

[workspace]
members = ["macro-impl", "tests-features"]

[workspace.dependencies]
snafu = { version = "0.8.6", default-features = false }
proc-macro2 = "1.0"
proc-macro-crate = "3.3"
quote = "1.0"
syn = "2.0"
# Workspace local crates
suzunari-error = { path = ".", default-features = false }
suzunari-error-macro-impl = { path = "./macro-impl", default-features = false }

[package]
name = "suzunari-error"
description.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["std"]
std = ["alloc", "snafu/std"]
alloc = ["snafu/alloc", "suzunari-error-macro-impl/alloc"]

[dependencies]
snafu = { workspace = true, features = ["rust_1_81"] }
suzunari-error-macro-impl.workspace = true

[dev-dependencies]
trybuild = "1.0"
