[package]
name = "suzunari-error-macro-impl"
description = "Macro implementations for Suzunari Error"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[features]
alloc = []

[dependencies]
proc-macro-crate.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }
[dev-dependencies]
suzunari-error.workspace = true
