[package]
name = "suzunari-error-macro-impl"
description = "Proc-macro internals for suzunari-error — not intended for direct use"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[features]
alloc = []

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }

[dev-dependencies]
suzunari-error.workspace = true
